--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 0.12
+ - New version of Plack::App::OAuth2::Info with support of Wikimedia
+   provider and debug mode.
 
 0.11 2022-04-05T02:20:54+02:00
  - New version of Plack::Middleware::Auth::OAuth2.
