--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.13
+ - Fix Plack::App::OAuth2::Info (processing of Wikimedia provider).
 
 0.12 2022-04-05T02:37:15+02:00
  - New version of Plack::App::OAuth2::Info with support of Wikimedia
