--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 0.14
+ - New version of Plack::App::OAuth2::Info (improved print of profile -
+   arrays).
 
 0.13 2022-04-05T02:47:48+02:00
  - Fix Plack::App::OAuth2::Info (processing of Wikimedia provider).
