--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.16
+ - New version of Plack::App::OAuth2::Info (fix of printing).
 
 0.15 2022-04-05T03:07:04+02:00
  - New version of Plack::App::OAuth2::Info (fix of default variable value).
