--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 0.17
+ - New version of Plack::App::OAuth2::Info (fix of JSON::PP::Boolean
+   serialization).
 
 0.16 2022-04-05T03:27:46+02:00
  - New version of Plack::App::OAuth2::Info (fix of printing).
