--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 0.18
+ - New version of Plack::App::OAuth2::Info (use of JSON::XS instead of
+   JSON).
 
 0.17 2022-04-05T03:39:15+02:00
  - New version of Plack::App::OAuth2::Info (fix of JSON::PP::Boolean
