--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.19
+ - New version of Plack::App::OAuth2::Info (try to fix JSON value).
 
 0.18 2022-04-05T13:39:09+02:00
  - New version of Plack::App::OAuth2::Info (use of JSON::XS instead of
