--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.20
+ - New version of Plack::App::OAuth2::Info (Better JSON::XS object).
 
 0.19 2022-04-05T13:51:40+02:00
  - New version of Plack::App::OAuth2::Info (try to fix JSON value).
