--- a/Changes
+++ b/Changes
@@ -5,7 +5,7 @@
  - New version of Plack::App::OAuth2::Info (try to fix JSON value).
 
 0.18 2022-04-05T13:39:09+02:00
- - New version of Plack::App::OAuth2::Info (use of JSON::XS instead of
+ - New version of Tags::HTML::OAuth2::Info (use of JSON::XS instead of
    JSON).
 
 0.17 2022-04-05T03:39:15+02:00
