--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.21
+ - New version of Plack::App::OAuth2::Info (fix code).
 
 0.20 2022-04-05T14:03:18+02:00
  - New version of Plack::App::OAuth2::Info (Better JSON::XS object).
