--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.22
+ - New version of Plack::App::OAuth2::Info (debug version).
 
 0.21 2022-04-05T14:06:46+02:00
  - New version of Plack::App::OAuth2::Info (fix code).
