--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.24
  - New version of Tags::HTML::OAuth2::Info (remove utf8 decoding of structure
    from JSON).
+ - New version of Plack::App::OAuth2::Info (set boolean values for JSON).
 
 0.23 2022-04-05T14:20:07+02:00
  - New version of Plack::App::OAuth2::Info (debug version).
