--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.25
+ - New version of Plack::App::OAuth2::Info (set boolean values).
 
 0.24 2022-04-05T14:47:26+02:00
  - New version of Tags::HTML::OAuth2::Info (remove utf8 decoding of
