--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.27
+ - New version of Plack::App::OAuth2::Info (set boolean values).
  - Update docker base image to bullseye.
 
 0.26 2022-04-05T14:56:18+02:00
