--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.31
+ - Change login button title to better.
 
 0.30 2022-10-05T01:00:13+02:00
  - Add missing dependency for DateTime::Format::Pg.
