--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
  - Fix input field in SectionForm to number type.
  - Fix oauth2 profile.
  - Fix UTF8 in competition save.
+ - Fix UTF8 in section logo.
  - If user from meta doesn't exist, create.
 
 0.31 2022-10-05T03:11:03+02:00
