--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@
  - Fix UTF8 in competition save.
  - Fix UTF8 in section logo.
  - If user from meta doesn't exist, create.
+ - Implement endpoing for removing of section.
  - Improve section page logo.
  - Rewrite competition logos to thumbs.
 
