--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.32
+ - Add button for removing of section in section page.
  - Add captions for logos in competition and improve design.
  - Fix input field in SectionForm to number type.
  - Fix oauth2 profile.
