--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
  - Add 'logo_url' parameter to Menu helper.
  - Add button for removing of section in section page.
  - Add captions for logos in competition and improve design.
+ - Add link on logo image to main page.
  - Fix input field in SectionForm to number type.
  - Fix oauth2 profile.
  - Fix UTF8 in competition save.
