--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@
  - Add button for removing of section in section page.
  - Add captions for logos in competition and improve design.
  - Add link on logo image to main page.
+ - Add low level method for update competition.
  - Fix input field in SectionForm to number type.
  - Fix oauth2 profile.
  - Fix UTF8 encoding for data object of image.
