Rewrite save_image() and save_section_image() backend DB helpers to update_or_create()

--- a/Changes
+++ b/Changes
@@ -19,6 +19,8 @@
  - Improve section page logo.
  - Rewrite competition logos to thumbs.
  - Rewrite save_section_category() backend DB helper to update_or_create().
+ - Rewrite save_image() and save_section_image() backend DB helpers to
+   update_or_create().
 
 0.31 2022-10-05T03:11:03+02:00
  - Change login button title to better.
