--- a/Changes
+++ b/Changes
@@ -6,6 +6,7 @@
  - Add low level method for update competition.
  - Add low level method for update section.
  - Add section_id to section form for update.
+ - Add user color to Image::Grid selection.
  - Fix input field in SectionForm to number type.
  - Fix oauth2 profile.
  - Fix UTF8 encoding for data object of image.
