--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.32
  - Add 'logo_url' parameter to Menu helper.
  - Add button for removing of section in section page.
+ - Add button for view of images in section.
  - Add captions for logos in competition and improve design.
  - Add link on logo image to main page.
  - Add low level method for update competition.
