Add $attr_hr argument for fetch_section_images() in DB backend

--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.32
+ - Add $attr_hr argument for fetch_section_images() in DB backend.
  - Add 'logo_url' parameter to Menu helper.
  - Add button for removing of section in section page.
  - Add button for view of images in section.
