Rewrite image src callback and add error if doesn't exist in Grid

--- a/Changes
+++ b/Changes
@@ -22,6 +22,7 @@
  - Improve section page logo.
  - Rewrite competition logos to thumbs.
  - Rewrite Data::Commons::Vote::Image to inherited Data::Commons::Image.
+ - Rewrite image src callback and add error if doesn't exist in Grid.
  - Rewrite save_section_category() backend DB helper to update_or_create().
  - Rewrite save_image() and save_section_image() backend DB helpers to
    update_or_create().
