--- a/Changes
+++ b/Changes
@@ -17,6 +17,7 @@
  - Fix update of competition.
  - If user from meta doesn't exist, create.
  - Implement endpoing for removing of section.
+ - Implement endpoint for images view.
  - Implement low level backend DB helper for deleting of section.
  - Implement section update.
  - Improve section page logo.
