--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.36
+ - Add nbsp between login name and logout link.
  - Add section name to images page.
  - Move Data::Image and Data::Commons::Image to CPAN.
 
