--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.36
+ - Add default data for log_type.
  - Add log tables to DB.
  - Add nbsp between login name and logout link.
  - Add section name to images page.
