--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.36
  - Add checks for data objects in save routines.
  - Add default data for log_type.
+ - Add handling with log records.
  - Add log tables to DB.
  - Add nbsp between login name and logout link.
  - Add section name to images page.
