Fix loading process for handle issues and log process

--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@
  - Add log tables to DB.
  - Add nbsp between login name and logout link.
  - Add section name to images page.
+ - Fix loading process for handle issues and log process.
  - Move Data::Image and Data::Commons::Image to CPAN.
  - Move Tags::HTML::Image::Grid to CPAN.
  - Move Tags::HTML::Pager to CPAN.
