--- a/Changes
+++ b/Changes
@@ -6,6 +6,7 @@
  - Add log tables to DB.
  - Add nbsp between login name and logout link.
  - Add section name to images page.
+ - Add Tags::HTML::Table::View for viewing of log records.
  - Fix loading process for handle issues and log process.
  - Move Data::Image and Data::Commons::Image to CPAN.
  - Move Tags::HTML::Image::Grid to CPAN.
