--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.36
  - Add checks for data objects in save routines.
  - Add data object for a element.
+ - Add db backend helpers for log records.
  - Add default data for log_type.
  - Add handling with log records.
  - Add log tables to DB.
