Add log and logs pages

--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@
  - Add db backend helpers for log records.
  - Add default data for log_type.
  - Add handling with log records.
+ - Add log and logs pages.
  - Add log tables to DB.
  - Add nbsp between login name and logout link.
  - Add section name to images page.
