Add update_competition log type

--- a/Changes
+++ b/Changes
@@ -11,6 +11,7 @@
  - Add section name to images page.
  - Add Tags::HTML::Pre for log record.
  - Add Tags::HTML::Table::View for viewing of log records.
+ - Add update_competition log type.
  - Fix loading process for handle issues and log process.
  - Move Data::Image and Data::Commons::Image to CPAN.
  - Move Tags::HTML::Image::Grid to CPAN.
