Implement delete_section_images()

--- a/Changes
+++ b/Changes
@@ -15,6 +15,7 @@
  - Add Tags::HTML::Table::View for viewing of log records.
  - Add update_competition log type.
  - Fix loading process for handle issues and log process.
+ - Implement delete_section_images().
  - Move Data::Image and Data::Commons::Image to CPAN.
  - Move Tags::HTML::Image::Grid to CPAN.
  - Move Tags::HTML::Pager to CPAN.
