--- a/Changes
+++ b/Changes
@@ -7,6 +7,7 @@
  - Add db backend helpers for log records.
  - Add default data for log_type.
  - Add delete_competition_images log type.
+ - Add delete_competition_section_images().
  - Add handling with log records.
  - Add log and logs pages.
  - Add log tables to DB.
