--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.37
  - Add license to image DB table.
  - Implement image_structured_data() in Fetcher.
+ - License could be null in DB.
 
 0.36 2022-10-16T12:20:19+02:00
  - Add button to view competition logs.
