--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.37
  - Add license table to DB.
  - Add license to image DB table.
+ - Add license to image in Backend.
  - Implement image_structured_data() in Fetcher.
  - License could be null in DB.
 
