--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
  - Add license table to DB.
  - Add license to image DB table.
  - Add license to image in Backend.
+ - Add short_name to license table in DB.
  - Implement image_structured_data() in Fetcher.
  - License could be null in DB.
 
