--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@
  - Add short_name to license table in DB.
  - Handle item which is not available.
  - Implement image_structured_data() in Fetcher.
+ - Improve schema with license in image.
  - License could be null in DB.
 
 0.36 2022-10-16T12:20:19+02:00
