--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
  - Add license table to DB.
  - Add license to image DB table.
  - Add license to image in Backend.
+ - Add license_obj to Data::Commons::Vote::Image object.
  - Add short_name to license table in DB.
  - Handle item which is not available.
  - Implement image_structured_data() in Fetcher.
