--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@
  - Add license to image in Backend.
  - Add license_obj to Data::Commons::Vote::Image object.
  - Add short_name to license table in DB.
+ - Add wd_qid parameter to Competition data object.
  - Handle item which is not available.
  - Implement image_structured_data() in Fetcher.
  - Improve schema with license in image.
