--- a/Changes
+++ b/Changes
@@ -13,6 +13,7 @@
  - Improve schema with license in image.
  - License could be null in DB.
  - Store license to license and image tables in DB.
+ - Update competiton only if i am maintainer of competition.
 
 0.36 2022-10-16T12:20:19+02:00
  - Add button to view competition logs.
