--- a/Changes
+++ b/Changes
@@ -7,6 +7,7 @@
  - Add short_name to license table in DB.
  - Add wd_qid column to competition DB table.
  - Add wd_qid parameter to Competition data object.
+ - Add wd_qid to competition and competition_form pages.
  - Add wd_qid to Backend handling with competition.
  - Handle item which is not available.
  - Implement image_structured_data() in Fetcher.
