--- a/Changes
+++ b/Changes
@@ -6,6 +6,7 @@
  - Add license_obj to Data::Commons::Vote::Image object.
  - Add short_name to license table in DB.
  - Add Theme and ThemeImages data objects.
+ - Add theme and theme_images backend helpers.
  - Add theme and theme_images tables to schema.
  - Add wd_qid column to competition DB table.
  - Add wd_qid parameter to Competition data object.
