--- a/Changes
+++ b/Changes
@@ -16,6 +16,7 @@
  - Implement image_structured_data() in Fetcher.
  - Improve schema with license in image.
  - License could be null in DB.
+ - Move code for image loading to load_commons_image() in Load.
  - Save and update wd_qid in competition form.
  - Store license to license and image tables in DB.
  - Update competiton only if i am maintainer of competition.
