Implement login page

--- a/Changes
+++ b/Changes
@@ -16,6 +16,7 @@
  - Add wd_qid to Backend handling with competition.
  - Handle item which is not available.
  - Implement image_structured_data() in Fetcher.
+ - Implement login page.
  - Improve schema with license in image.
  - License could be null in DB.
  - Move code for image loading to load_commons_image() in Load.
