--- a/Changes
+++ b/Changes
@@ -23,6 +23,7 @@
  - License could be null in DB.
  - Move code for image loading to load_commons_image() in Load.
  - Save and update wd_qid in competition form.
+ - Set uploader_id to could be NULL in image table.
  - Store license to license and image tables in DB.
  - Theme shortcut is unique key in DB.
  - Update competiton only if i am maintainer of competition.
