--- a/Changes
+++ b/Changes
@@ -28,6 +28,7 @@
  - Store license to license and image tables in DB.
  - Theme shortcut is unique key in DB.
  - Update competiton only if i am maintainer of competition.
+ - Uploader is not required in Image data object.
 
 0.36 2022-10-16T12:20:19+02:00
  - Add button to view competition logs.
