--- a/Changes
+++ b/Changes
@@ -21,6 +21,7 @@
  - Implement image_structured_data() in Fetcher.
  - Implement login page.
  - Improve load image activity.
+ - Improve login page with theme.
  - Improve schema with license in image.
  - License could be null in DB.
  - Move code for image loading to load_commons_image() in Load.
