Smaller login backgroung image size and better author string

--- a/Changes
+++ b/Changes
@@ -29,6 +29,7 @@
  - Move code for image loading to load_commons_image() in Load.
  - Save and update wd_qid in competition form.
  - Set uploader_id to could be NULL in image table.
+ - Smaller login backgroung image size and better author string.
  - Store license to license and image tables in DB.
  - Theme shortcut is unique key in DB.
  - Update competiton only if i am maintainer of competition.
