--- a/Changes
+++ b/Changes
@@ -17,6 +17,7 @@
  - Add wd_qid to competition and competition_form pages.
  - Add wd_qid to Backend handling with competition.
  - Fetch author name from Wikidata label if exists.
+ - First version of login app.
  - Fix uploader in Backend.
  - Date of creation for image in DB could be null.
  - Handle item which is not available.
