--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.39
+ - Fix login_link parameter in Tags::HTML::Commons::Vote::Login.
 
 0.38 2022-10-21T02:17:23+02:00
  - Fix delivering of login app.
