--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 0.40
  - Add count_competition() method to backend.
+ - More parallel processes of web app.
 
 0.39 2022-10-21T02:35:07+02:00
  - Fix login_link parameter in Tags::HTML::Commons::Vote::Login.
