--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 0.40
  - Add count_competition() method to backend.
+ - Improve bottom right note colors in Login app.
  - More parallel processes of web app.
 
 0.39 2022-10-21T02:35:07+02:00
