--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 0.42
  - Don't install Plack::App::Login, not used.
+ - Fix Gazelle dependencies.
 
 0.41 2022-10-21T18:05:11+02:00
  - Install HTML::Strip debian package.
