--- a/Changes
+++ b/Changes
@@ -6,6 +6,7 @@
  - Add tags html pages for competition validations.
  - Implement update_person() method in backend.
  - Fix image_db2obj() method in backend.
+ - Fix logging in case when user was created as uploader.
  - Fix script and style elements.
  - Fix tests in data object dist.
  - Rewrite validation to full support in application.
