--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@
  - Add DB tables for competition validations.
  - Add initialization data for validations.
  - Add tags html pages for competition validations.
+ - Delete dt_loaded_at in competition if removing last section.
  - Implement update_person() method in backend.
  - Fix image_db2obj() method in backend.
  - Fix logging in case when user was created as uploader.
