--- a/Changes
+++ b/Changes
@@ -3,9 +3,11 @@
  - Add data objects for competition validations.
  - Add DB tables for competition validations.
  - Add initialization data for validations.
+ - Add new log types to initialization data in db.
  - Add tags html pages for competition validations.
  - Delete dt_loaded_at in competition if removing last section.
  - Implement update_person() method in backend.
+ - Improve option descriptions in initialization data in db.
  - Log type to 50 characters.
  - Fix image_db2obj() method in backend.
  - Fix logging in case when user was created as uploader.
