Add count_competition_sections() method to backend

--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 0.43
  - Add backend methods for validations.
+ - Add count_competition_sections() method to backend.
  - Add data objects for competition validations.
  - Add DB tables for competition validations.
  - Add initialization data for validations.
