Log type to 50 characters in data object

--- a/Changes
+++ b/Changes
@@ -9,7 +9,8 @@
  - Delete dt_loaded_at in competition if removing last section.
  - Implement update_person() method in backend.
  - Improve option descriptions in initialization data in db.
- - Log type to 50 characters.
+ - Log type to 50 characters in data object.
+ - Log type to 50 characters in db.
  - Fix image_db2obj() method in backend.
  - Fix logging in case when user was created as uploader.
  - Fix script and style elements.
