--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 0.45
  - Add date of first upload of user.
+ - Remove Plack::Handler::Gazelle for now.
 
 0.44 2022-10-29T17:12:48+02:00
  - Back plack handler to trivial.
