--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.48
+ - Implement user_exists() method to fetcher.
 
 0.47 2022-10-29T18:51:26+02:00
  - Fix update_person to better version in backend.
