--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 0.48
  - Add roles to application.
+ - Fix constraints in person_role table.
  - Implement user_exists() method to fetcher.
+ - wm_username is required for commons.vote app.
 
 0.47 2022-10-29T18:51:26+02:00
  - Fix update_person to better version in backend.
