--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
  - Add roles to application.
  - Fix constraints in person_role table.
  - Implement user_exists() method to fetcher.
+ - New initialization data for db.
  - wm_username is required for commons.vote app.
 
 0.47 2022-10-29T18:51:26+02:00
