--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.49
+ - Fix view of competition on which i have admin rights.
 
 0.48 2022-10-30T14:50:48+01:00
  - Add id to PersonRole data object.
