--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 0.49
+ - Add ValidationBad data object.
+ - Fix requirements for PersonRole data object.
  - Fix view of competition on which i have admin rights.
 
 0.48 2022-10-30T14:50:48+01:00
