--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@
  - Add ValidationBad data object.
  - Fix requirements for PersonRole data object.
  - Fix view of competition on which i have admin rights.
+ - Load competition only if sections exists.
  - Save bad validations to db in validation activity.
 
 0.48 2022-10-30T14:50:48+01:00
