--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 0.49
+ - Add competition_images page and after validation move to this page.
+ - Add validation result to image grid view.
  - Add validation_bad table to db.
  - Add ValidationBad data object.
+ - Fix removing of validation.
  - Fix requirements for PersonRole data object.
  - Fix view of competition on which i have admin rights.
  - Handle validation_bad in backend.
