--- a/Changes
+++ b/Changes
@@ -1,11 +1,13 @@
 0.49
  - Add competition_images page and after validation move to this page.
+ - Add count_validation_bad() method in backend.
  - Add validation result to image grid view.
  - Add validation_bad table to db.
  - Add ValidationBad data object.
  - Fix removing of validation.
  - Fix requirements for PersonRole data object.
  - Fix view of competition on which i have admin rights.
+ - Handle competition images in backend.
  - Handle validation_bad in backend.
  - Load competition only if sections exists.
  - Save bad validations to db in validation activity.
