--- a/Changes
+++ b/Changes
@@ -10,6 +10,7 @@
  - Remove obsolete information from competition table in schema.
  - Rewrite table name for voting types in initialization data.
  - Rewrite vote_type to voting_type in schema.
+ - Update plack app.
 
 0.49 2022-10-31T11:43:08+01:00
  - Add competition_images page and after validation move to this page.
