Implement simple CSS for HTML table

--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 0.51
  - Add favicon.
+ - Implement simple CSS for HTML table.
  - Redirect to competition after section creation.
 
 0.50 2022-11-01T01:10:54+01:00
