--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 0.51
  - Add favicon.
+ - Add link to Wikidata item.
+ - Add space to HTML output.
  - Implement simple CSS for HTML table.
  - Redirect to competition after section creation.
 
