--- a/Changes
+++ b/Changes
@@ -7,6 +7,7 @@
  - Add Wikibase::Datatype::Query class.
  - Implement simple CSS for HTML table.
  - Redirect to competition after section creation.
+ - Update backend.
 
 0.50 2022-11-01T01:10:54+01:00
  - Add CompetitionVoting page.
