Update plack app

--- a/Changes
+++ b/Changes
@@ -10,6 +10,7 @@
  - Redirect to competition after section creation.
  - Update activities.
  - Update backend.
+ - Update plack app.
  - Update Tags::HTML pages.
 
 0.50 2022-11-01T01:10:54+01:00
