--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.52
  - Cleanup vote table in schema.
  - CompetitionVoting has many votes in schema.
+ - Fix favicon.
  - Fix wm_username utf8.
 
 0.51 2022-11-03T04:35:44+01:00
