--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@
  - CompetitionVoting has many votes in schema.
  - Fix favicon.
  - Fix wm_username utf8.
+ - Update backend.
 
 0.51 2022-11-03T04:35:44+01:00
  - Add favicon.
