--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.53
  - Update backend.
  - Update data objects.
+ - Update Tags::HTML pages.
 
 0.52 2022-11-04T02:10:59+01:00
  - Cleanup vote table in schema.
