Update plack app

--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
  - Update activities.
  - Update backend.
  - Update data objects.
+ - Update plack app.
  - Update Tags::HTML pages.
 
 0.52 2022-11-04T02:10:59+01:00
