--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.56
+ - Add average count to stat page.
  - Fix access to vote_stats of non-existing competition.
  - Fix link to competition on main page.
 
