--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.58
+ - Add value for situation when no data exists in table view.
  - Simplify and fix main page tables.
 
 0.57 2022-11-06T13:56:51+01:00
