--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.58
+ - Add information about no data in vote_stats page.
  - Add value for situation when no data exists in table view.
  - Simplify and fix main page tables.
 
