--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 0.60
  - Add links to vote_stat (version with 5 columns).
+ - Rewrite of Tags::HTML::Image.
 
 0.59 2022-11-07T00:57:57+01:00
  - Add link to vote_stats page.
