--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 0.60
  - Add links to vote_stat (version with 5 columns).
  - Fix cleanup of object.
+ - Fix delete count in backend.
+ - Fix fetching of competition images for voting in backend.
  - Fix loading of competition images for voting.
  - Fix moving after saving of vote on last image.
  - Rewrite of Tags::HTML::Image.
