--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
  - Add links to vote_stat (version with 5 columns).
  - Fix cleanup of object.
  - Fix delete count in backend.
+ - Fix deleting of section images.
  - Fix fetching of competition images for voting in backend.
  - Fix loading of competition images for voting.
  - Fix moving after saving of vote on last image.
