Fix next image id

--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
  - Add "(0-?)" string to 'Number of votes' form.
  - Add count_competition_image_valid() method to backend.
  - Add unit to image size check.
+ - Fix next image id.
  - Fix saving of vote.
  - Fix viewing of image in voting.
 
