Add css_comment_height parameter to Vote Image tags helper

--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
  - Add "(0-?)" string to 'Number of votes' form.
  - Add count_competition_image_valid() method to backend.
  - Add css_comment_height parameter to Image tags helper.
+ - Add css_comment_height parameter to Vote Image tags helper.
  - Add unit to image size check.
  - Fix next image id.
  - Fix saving of vote.
